#37 - precompilation assets #40 - consitent default position of central idea #41 - export fucntion #43 - added cut nodes (disabled nodes) litsener #44 - words overlap issue #51 - update icons and positions #52 - show warning modal while going to home #54 - added sync loader while loading the attchments #56 - confirm file delete (with animations) #57 - added liteseners for documents/attachments #67 - Added realtime litseners (please inform me if i got miss any) #68 - Fixed collapsing issue #69 - Fixed node notes updations #70 - set minimum height to nodes and central node #71 - update line color functionality

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -286,7 +286,7 @@ a:hover, .btn1:hover, .btn2:hover {
 .ml_3{margin-left: 30px}
 .ml_4{margin-left: 40px}
 .ml_5{margin-left: 50px}
-.ml_10{margin-left: 10em}
+.ml_12{margin-left: 12em}
 
 
 .mr_a{margin-right: auto}
@@ -393,7 +393,7 @@ a:hover, .btn1:hover, .btn2:hover {
   content:"restore_page"; 
 }
 .edit_delete_btn:hover .restore_icon::before{
-  content:"Restore";
+  content:"Reset";
   text-transform: capitalize;
   font-family: 'lato';
   font-family: 'lato';
